solved mobile layout issues for home, about, and pricing

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -3,6 +3,10 @@
   padding-bottom: .5em;
 }
 
+#about-background {
+  height: 63em;
+}
+
 #page-logo {
   height: 5em;
   position: absolute;
@@ -35,10 +39,10 @@
 }
 
 #about-section {
-  height: 35em;
-  width: 22em;
-  margin-top: 2em;
-  margin-left: 2em;
+  height: 54em;
+  width: 24em;
+  margin-top: 1em;
+  margin-left: 1em;
   background-color: rgba(255,255,255,0.56);
   display: flex;
   flex-direction: column;
@@ -54,11 +58,16 @@
 }
 
 .about p {
-  width: 18em;
+  width: 20em;
   font-size: 1.1rem;
   // position: absolute;
   align-self: center;
-  margin-top: 2em;
+  margin-top: 1em;
+  margin-left: 1em;
+}
+
+.about-aside {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
